bug#58277 a02_meta.diff drop trigger in TUP sets index to Dropping